# triton-kernel-fused

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  bench.py  parity_bibo.py  parity_situ.py  pyproject.toml  pyrightconfig.json  skills-lock.json
.autoresearch/: analyze_synth.py  autotune_gram_ns8.py  autotune_gram_restarts.py  bench_graph_local.py  bench_graph_sweep.py  bench_muon.py  bench_muon_4way.py  bench_muon_symmul.py  bench_report.py  bench_scale_mode.py  bench_symmul.py  best_grouped_v2.py  blackwell_findings.md  cands_holdout.json  cands_run0.json  cands_run1.json  cands_run2.json  cands_run3.json  cands_run4.json  ce_compiled.py  ce_eval_local.py  conv_router_findings.md  eval_kappa.py  grouped_parity.py  ideas_todo.md  jns6_cap16.json  kaggle_eval.py  kappa_results.jsonl  kappa_state.json  manas_mnist.py  manas_mnist1d.py  manas_mnist1d_results.json  manas_mnist_results.json  mmx6_l005.json  mmx_2p5e6_12.json  mmx_u3_12.json  moe_grouped_reflections.md  moe_grouped_results.jsonl  moe_grouped_scope.md  muon_findings.md  (+35 more)
.autoresearch/baselines/: flash_muon_mmt.py
.autoresearch/manas/: MANAS_JOURNEY.md  a7_mechanism.py  a7_rho0.0.json  a7_rho0.94.json  bs_rho.py  eval_manas.py  exp_manas.py  grok_manas.json  grok_manas.py  hetero_dose.json  hetero_dose.py  hetero_u.json  hetero_u.py  inductive_bias.md  issues.md  last_wave.json  manas_explainer.html  parity_ship.py  reach95.py  reach95_mnist.py  reflections.md  replot_acc.py  results.jsonl  round_report.md  run_wave.py  scope.md  smoke_exp.py  speed_mnist.py  speed_mnist_acc.json  speed_mnist_acc.py  speed_mnist_results.json  state.json
.autoresearch/manas/logs/: adamw_accum_k4_s0.json  adamw_accum_k4_s1.json  adamw_accum_k4_s2.json  adamw_accum_k4_s3.json  adamw_accum_k4_s4.json  adamw_lr1e3_wd01_s0.json  adamw_lr1e3_wd01_s1.json  adamw_lr1e3_wd01_s2.json  adamw_lr1e3_wd01_s3.json  adamw_lr1e3_wd01_s4.json  adamw_lr1e3_wd1_s0.json  adamw_lr1e3_wd1_s1.json  adamw_lr1e3_wd1_s2.json  adamw_lr1e3_wd1_s3.json  adamw_lr1e3_wd1_s4.json  adamw_lr2e3_wd01_s0.json  adamw_lr2e3_wd01_s1.json  adamw_lr2e3_wd01_s2.json  adamw_lr2e3_wd01_s3.json  adamw_lr2e3_wd01_s4.json  adamw_lr2e3_wd1_s0.json  adamw_lr2e3_wd1_s1.json  adamw_lr2e3_wd1_s2.json  adamw_lr2e3_wd1_s3.json  (+262 more)
.autoresearch/report/: muon_symmul_report.html
.commandcode/taste/: taste.md
.github/workflows/: deploy-docs.yml
ablate_muon/: README.md  alt_opt.py  grok_moe.py  mech.py  metrics.py  olm.py  run.sh  run_6000.sh  run_ablation.py  run_olm.py
docs/: astro.config.mjs  docs.json  index.mdx  package-lock.json  package.json  quickstart.mdx
docs/concepts/: benchmarking.mdx  the-structural-edge.mdx
docs/kernels/: cross-entropy.mdx  moe.mdx  muon.mdx  router.mdx  xsa.mdx
examples/: moe_usage.py
kernels/: __init__.py  causal_conv1d_router.py  cross_entropy.py  moe.py  muon.py  router.py  swiglu.py  xsa.py
kernels/muon/: __init__.py  muon_scaling.py
kernels/sm120/: __init__.py  cross_entropy.py  moe.py  moe_grouped.py  muon.py  newton_schulz_gram.py  newton_schulz_symmul.py  router.py  xsa.py
kernels/sm75/: __init__.py  cross_entropy.py  manas.py  moe.py  muon.py  router.py  xsa.py
qr_challenge/: kernels_qr.py  run_local.py  submission.py
scripts/: env_check.py  setup_env.py
(+14 files in other folders)
