[project]
name = "triton-kernel-fused"
version = "0.1.0"
description = "Drop-in fused Triton kernels (fwd+bwd): fused-linear cross-entropy, XSA, conv MoE router, PolyGLU MoE."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# The kernels are pure Triton: the package itself has NO hard runtime deps, so installing it never
# resolves, downloads, or clobbers torch/triton. You PROVIDE a CUDA torch + triton — most GPU containers
# already ship one (e.g. an RTX PRO 6000 Blackwell image with torch cu130), and `scripts/setup_env.py`
# installs one only if it's missing. This deliberately avoids the old failure where a hard torch pin to a
# fixed CUDA channel (cu124) made `uv sync` fail on a Blackwell box whose wheels live on a different channel.
dependencies = []

[project.optional-dependencies]
# Convenience for a FRESH machine that has NO CUDA torch yet. Prefer `scripts/setup_env.py` — it reuses an
# existing install and lets you pick the CUDA channel (`--cuda cu128`, etc.). Do NOT install this on top of
# a container that already provides torch; you'd risk replacing a GPU-correct build with a mismatched one.
bench = [
    "torch>=2.4.0",
    "triton>=3.0.0; sys_platform == 'linux'",   # on Windows triton ships inside the torch wheel
]

# Recommended environment setup (see README / docs Quickstart):
#   python scripts/env_check.py                 # is this env already ready? (probe only)
#   python scripts/setup_env.py                 # reuse if ready, else install only what's missing
# uv users who want to REUSE a container's torch:
#   uv venv --system-site-packages && uv pip install -e .   # existing torch satisfies nothing to reinstall
# Already have a CUDA torch + triton env, or copied kernels/ into your project? Just `python bench.py`.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernels"]
